@@ -1,3 +1,9 @@
+2004-08-04  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* calendar/e-cal-backend-exchange-calendar.c (book_resource): 
+	Implemented the code to book the calendar of a resource object.
+	(send_objects): Added code to send mails to all attendees.
+
 2004-08-03  Sushma Rai <rsushma@novell.com>
 
 	* storage/exchange-hierarchy-foreign.c (remove_folder): Emitting the 
